# website-old1

./: .gitignore  Cargo.toml  package-lock.json  package.json  pygment.py  test.html  tsconfig.json
src/: database.rs  main.rs  utils.rs
static/css/: paste.css
static/js/: paste.js  paste.ts
static/templates/: home.html  paste.html  view_paste.html
themes/: nord_darker.tmTheme
