[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
sqlx = {version="0.6.2", features= ["postgres", "runtime-tokio-native-tls"] }
syntect = "5.0.0"
